--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,13 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(rclcpp_components REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(px4_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 set(dependencies
 rclcpp 
@@ -25,6 +29,9 @@ rclcpp_components
 nav_msgs 
 std_srvs 
 px4_msgs
+tf2
+tf2_ros
+tf2_geometry_msgs
 )
 
 include_directories(
