--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(rclcpp_components REQUIRED)
@@ -23,6 +24,7 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 
 set(dependencies
+Eigen3
 rclcpp 
 rclcpp_lifecycle 
 rclcpp_components
@@ -36,6 +38,7 @@ tf2_geometry_msgs
 
 include_directories(
   include
+  ${EIGEN3_INCLUDE_DIR}
 )
 
 set(executable_name api)
