--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>laser_uav_px4_api</name>
+  <name>laser_uav_hw_api</name>
   <version>0.1.0</version>
-  <description>This packages contains the api node from comunication with px4 autopilot</description>
+  <description>This packages contains the api node from comunication with px4 autopilot and ardupilot</description>
   <maintainer email="augustoviniciud@gmail.com">augusto</maintainer>
   <license>BSD</license>
 
