--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>geometry_msgs</depend>
   <depend>std_srvs</depend>
   <depend>px4_msgs</depend>
+  <depend>ardupilot_msgs</depend>
   <depend>laser_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
